--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jgome284/mocha-js.git"
+    "url": "https://github.com/jgome284/mocha-js.git"
   },
   "author": "Jose M. Gomez",
   "license": "MIT",
