--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Demoing JavaScript testing with Mocha.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha test/**/*_test.js"
   },
   "repository": {
     "type": "git",
